Card spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,6 @@
     height: 100vh;
 }
 
+.card-body{
+    height: 100px;
+}
